--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,55 +1,106 @@
 <navbar></navbar>
 
+<!--<div class="container">-->
+<!--<div class="row">-->
+<!--<div class="col-sm-12">-->
+<!--<h1>Login</h1>-->
+
+<!--<p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@example.com</code>-->
+<!--/ <code>test</code></p>-->
+
+<!--<p>Admin account is <code>admin@example.com</code> / <code>admin</code></p>-->
+<!--</div>-->
+<!--<div class="col-sm-12">-->
+<!--<form class="form" name="form" ng-submit="vm.login(form)" novalidate>-->
+
+<!--<div class="form-group">-->
+<!--<label>Email</label>-->
+
+<!--<input type="email" name="email" class="form-control" ng-model="vm.user.email" required>-->
+<!--</div>-->
+
+<!--<div class="form-group">-->
+<!--<label>Password</label>-->
+
+<!--<input type="password" name="password" class="form-control" ng-model="vm.user.password" required>-->
+<!--</div>-->
+
+<!--<div class="form-group has-error">-->
+<!--<p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && vm.submitted">-->
+<!--Please enter your email and password.-->
+<!--</p>-->
+
+<!--<p class="help-block" ng-show="form.email.$error.email && vm.submitted">-->
+<!--Please enter a valid email.-->
+<!--</p>-->
+
+<!--<p class="help-block">{{ vm.errors.other }}</p>-->
+<!--</div>-->
+
+<!--<div>-->
+<!--<button class="btn btn-inverse btn-lg btn-login" type="submit">-->
+<!--Login-->
+<!--</button>-->
+<!--<a class="btn btn-default btn-lg btn-register" ui-sref="signup">-->
+<!--Register-->
+<!--</a>-->
+<!--</div>-->
+
+<!--<hr/>-->
+<!--<div class="row">-->
+<!--<div class="col-sm-4 col-md-3">-->
+<!--<oauth-buttons classes="btn-block"></oauth-buttons>-->
+<!--</div>-->
+<!--</div>-->
+<!--</form>-->
+<!--</div>-->
+<!--</div>-->
+<!--<hr>-->
+<!--</div>-->
+
 <div class="container">
   <div class="row">
-    <div class="col-sm-12">
-      <h1>Login</h1>
-      <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@example.com</code> / <code>test</code></p>
-      <p>Admin account is <code>admin@example.com</code> / <code>admin</code></p>
-    </div>
-    <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="vm.login(form)" novalidate>
-
-        <div class="form-group">
-          <label>Email</label>
-
-          <input type="email" name="email" class="form-control" ng-model="vm.user.email" required>
-        </div>
-
-        <div class="form-group">
-          <label>Password</label>
-
-          <input type="password" name="password" class="form-control" ng-model="vm.user.password" required>
-        </div>
-
-        <div class="form-group has-error">
-          <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && vm.submitted">
-             Please enter your email and password.
-          </p>
-          <p class="help-block" ng-show="form.email.$error.email && vm.submitted">
-             Please enter a valid email.
-          </p>
-
-          <p class="help-block">{{ vm.errors.other }}</p>
-        </div>
-
-        <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Login
-          </button>
-          <a class="btn btn-default btn-lg btn-register" ui-sref="signup">
-            Register
-          </a>
-        </div>
-
-        <hr/>
-        <div class="row">
-          <div class="col-sm-4 col-md-3">
-            <oauth-buttons classes="btn-block"></oauth-buttons>
+    <div class="col-xs-6">
+      <div class="well">
+        <form name="form" class="form" ng-submit="vm.login(form)" novalidate>
+          <div class="form-group">
+            <label for="username" class="control-label">Username</label>
+            <input type="text" class="form-control" id="username" name="username" value="" required
+                   title="Please enter you username" placeholder="example@gmail.com" ng-model="vm.user.email">
+            <span class="help-block"></span>
           </div>
-        </div>
-      </form>
+          <div class="form-group">
+            <label for="password" class="control-label">Password</label>
+            <input type="password" class="form-control" id="password" name="password" value="" required
+                   title="Please enter your password" ng-model="vm.user.password">
+            <span class="help-block"></span>
+          </div>
+          <div id="loginErrorMsg" class="alert alert-error hide">Wrong username og password</div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" name="remember" id="remember"> Remember login
+            </label>
+
+            <p class="help-block">(if this is a private computer)</p>
+          </div>
+          <button type="submit" class="btn btn-success btn-block">Login</button>
+          <a href="/forgot/" class="btn btn-default btn-block">Help to login</a>
+        </form>
+      </div>
+    </div>
+    <div class="col-xs-6">
+      <p class="lead">Register now for <span class="text-success">FREE</span></p>
+      <ul class="list-unstyled" style="line-height: 2">
+        <li><span class="fa fa-check text-success"></span> See all your orders</li>
+        <li><span class="fa fa-check text-success"></span> Fast re-order</li>
+        <li><span class="fa fa-check text-success"></span> Save your favorites</li>
+        <li><span class="fa fa-check text-success"></span> Fast checkout</li>
+        <li><span class="fa fa-check text-success"></span> Get a gift
+          <small>(only new customers)</small>
+        </li>
+        <li><a href="/read-more/"><u>Read more</u></a></li>
+      </ul>
+      <p><a href="/new-customer/" class="btn btn-info btn-block">Yes please, register now!</a></p>
     </div>
   </div>
-  <hr>
 </div>
